<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_adocoes_aprovar"
            android:title="@string/adocoes_aprovar"
            android:icon="@drawable/ic_loyalty_white_24px"/>
        <item
            android:id="@+id/menu_quero_doar"
            android:title="@string/quero_doar"
            android:icon="@drawable/ic_control_point_duplicate_white_24px"/>
        <item
            android:id="@+id/menu_meus_pets"
            android:title="@string/meus_pets"
            android:icon="@drawable/ic_pets_white_24px"/>
        <item
            android:id="@+id/menu_meu_perfil"
            android:title="@string/meu_perfil"
            android:icon="@drawable/ic_person_white_24px"/>

        <item
            android:id="@+id/menu_politica_adocao"
            android:title="@string/politica_adocao"
            android:icon="@drawable/ic_assignment_white_24px"/>
    </group>
</menu>