<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
tools:context=".FiltrarPet"
android:background="@color/windowBackground">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:orientation="vertical" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/filtrarPetToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/filtrar_pet"
                    android:id="@+id/textView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/anakiwaDarker"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_raio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        style="@style/CustomFontStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/txtFiltroRaioEmKm"
                        android:hint="@string/raio_filtro"
                        android:layout_marginTop="5dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        style="@style/CustomFontStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/txtFiltroCidade"
                        android:hint="@string/cidade_filtro"
                        android:layout_marginTop="5dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        style="@style/CustomFontStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/txtFiltroEstado"
                        android:hint="@string/estado_filtro"
                        android:layout_marginTop="5dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        style="@style/CustomFontStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/txtFiltroPais"
                        android:hint="@string/pais_filtro"
                        android:layout_marginTop="5dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_idade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        style="@style/CustomFontStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/txtFiltroIdade"
                        android:hint="@string/idade_aproximada_filtro"
                        android:inputType="number"
                        android:layout_marginTop="5dp"/>

                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rgOpcoesSexoPetFiltro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        style="@style/CustomFontStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:id="@+id/lblSexoFiltro"
                        android:textColor="@color/anakiwaDarker"
                        android:text="@string/sexo_pet"/>

                    <RadioButton
                        style="@style/CustomFontStyle"
                        android:id="@+id/rbMachoFiltro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/sexo_pet_macho"
                        android:textSize="18dp"
                        android:textColor="@color/anakiwaDarker"/>

                    <RadioButton
                        style="@style/CustomFontStyle"
                        android:id="@+id/rbFemeaFiltro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sexo_pet_femea"
                        android:textSize="18dp"
                        android:textColor="@color/anakiwaDarker"/>

                </RadioGroup>


                <RadioGroup
                    android:id="@+id/rgOpcoesCastradoFiltro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/CustomFontStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblCastradoFiltro"
                        android:text="@string/castrado"
                        android:textSize="18dp"
                        android:textColor="@color/anakiwaDarker"/>

                    <RadioButton
                        style="@style/CustomFontStyle"
                        android:id="@+id/rbCastradoSimFiltro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/sim"
                        android:textSize="18dp"
                        android:textColor="@color/anakiwaDarker"/>

                    <RadioButton
                        style="@style/CustomFontStyle"
                        android:id="@+id/rbCastradoNaoFiltro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nao"
                        android:textSize="18dp"
                        android:textColor="@color/anakiwaDarker"/>

                    <RadioButton
                        style="@style/CustomFontStyle"
                        android:id="@+id/rbCastradoIndiferenteFiltro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/castrado_indiferente_filtro"
                        android:textSize="18dp"
                        android:textColor="@color/anakiwaDarker"/>

                </RadioGroup>

                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/spinEspecieFiltro"
                    android:layout_marginTop="5dp"
                    android:layout_height="60dp"
                    android:spinnerMode="dialog"
                    android:layout_marginBottom="10dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_raca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        style="@style/CustomFontStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/txtFiltroRaca"
                        android:hint="@string/raca_filtro"
                        android:layout_marginTop="5dp"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>